--- a/I3C_ImageCreator/mainwindow.ui
+++ b/I3C_ImageCreator/mainwindow.ui
@@ -53,7 +53,7 @@
         </spacer>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton">
+        <widget class="QPushButton" name="pushButtonPrevious">
          <property name="enabled">
           <bool>false</bool>
          </property>
@@ -63,7 +63,21 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_2">
+        <widget class="QLabel" name="labelLayer">
+         <property name="text">
+          <string>Layer</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="labelLayerValue">
+         <property name="text">
+          <string>1</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButtonNext">
          <property name="enabled">
           <bool>false</bool>
          </property>
@@ -101,9 +115,12 @@
       </spacer>
      </item>
      <item row="3" column="1">
-      <widget class="QSlider" name="horizontalSlider">
+      <widget class="QSlider" name="horizontalSliderLayer">
+       <property name="minimum">
+        <number>1</number>
+       </property>
        <property name="maximum">
-        <number>0</number>
+        <number>1</number>
        </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -161,8 +178,15 @@
     </property>
     <addaction name="actionAbout_Us"/>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="actionPainting_Window"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
+   <addaction name="menuView"/>
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
@@ -222,6 +246,17 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+N</string>
+   </property>
+  </action>
+  <action name="actionPainting_Window">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Painting Window</string>
    </property>
   </action>
  </widget>
