--- a/I3C_ImageCreator/mainwindow.ui
+++ b/I3C_ImageCreator/mainwindow.ui
@@ -66,6 +66,7 @@
      <string>View</string>
     </property>
     <addaction name="actionPainting_Window"/>
+    <addaction name="actionBrush_Window"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
@@ -139,7 +140,18 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Painting Window</string>
+    <string>Color Window</string>
+   </property>
+  </action>
+  <action name="actionBrush_Window">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Brush Window</string>
    </property>
   </action>
  </widget>
