--- a/I3C_ImageCreator/brushwidget.ui
+++ b/I3C_ImageCreator/brushwidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>340</width>
+    <height>315</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,31 +19,41 @@
      <rect>
       <x>10</x>
       <y>0</y>
-      <width>381</width>
-      <height>271</height>
+      <width>321</width>
+      <height>281</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="7" column="0">
-      <widget class="QListWidget" name="listWidget"/>
-     </item>
      <item row="3" column="0">
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <item>
-        <widget class="QPushButton" name="pushButtonBrush">
-         <property name="text">
-          <string>Brush</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="pushButtonEraser">
-         <property name="text">
-          <string>Eraser</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
+      <widget class="QPushButton" name="pushButtonBrush">
+       <property name="text">
+        <string>Brush</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="QSpinBox" name="spinBoxPenSize">
+       <property name="minimum">
+        <number>1</number>
+       </property>
+       <property name="maximum">
+        <number>150</number>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="labelBrushSize">
+       <property name="text">
+        <string>Brush Size</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QPushButton" name="pushButtonEraser">
+       <property name="text">
+        <string>Eraser</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </widget>
